k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodl-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: autodl-backend
    spec:
      containers:
        - name: autodl-backend
          image: autodlhub/backend:v1-beta
          ports:
            - containerPort: 8000
              name: django-port
          imagePullPolicy: Always
  selector:
    matchLabels:
      app: autodl-backend
