k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autodl-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: autodl-frontend
    spec:
      containers:
        - name: autodl-frontend
          image: autodlhub/frontend:v1-beta
          ports:
            - containerPort: 80
              name: http-port
          imagePullPolicy: Always
  selector:
    matchLabels:
      app: autodl-frontend
