k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autodl-frontend-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: autodl-frontend
  type: LoadBalancer
